# poetry-directory-dependency

./: README.md
package-a/: pyproject.toml
package-b/: pyproject.toml
package-c/: pyproject.toml
package-d/: pyproject.toml
