[tool.poetry]
name = "package-b"
version = "0.1.0"
description = ""
authors = ["Va Ha <goofiva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
package-c = { path = "../package-c", develop = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
